// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  class="satellite"
>
  <div
    class="satellite__radius"
  >
    <span>
      Радиус орбиты спутника:
    </span>
     
    <input
      class="form-control"
      type="text"
    />
     
    <span>
      км
    </span>
  </div>
   
  <div
    class="satellite__speed"
  >
    <h3>
      Требуемая скорость спутника:
    </h3>
     
    <div>
      
            Infinity м/c
        
    </div>
     
    <img
      src="https://mediasat.info/wp-content/uploads/2015/06/sat-orbit.jpg"
    />
  </div>
</div>
`;

exports[`c.9.1 Satellite c.9.1.3 with radius 42000k 1`] = `
<div
  class="satellite"
>
  <div
    class="satellite__radius"
  >
    <span>
      Радиус орбиты спутника:
    </span>
     
    <input
      class="form-control"
      type="text"
    />
     
    <span>
      км
    </span>
  </div>
   
  <div
    class="satellite__speed"
  >
    <h3>
      Требуемая скорость спутника:
    </h3>
     
    <div>
      
            3087 м/c
        
    </div>
     
    <img
      src="https://mediasat.info/wp-content/uploads/2015/06/sat-orbit.jpg"
    />
  </div>
</div>
`;

exports[`c.9.1 Satellite c.9.1.4 with radius 101010k 1`] = `
<div
  class="satellite"
>
  <div
    class="satellite__radius"
  >
    <span>
      Радиус орбиты спутника:
    </span>
     
    <input
      class="form-control"
      type="text"
    />
     
    <span>
      км
    </span>
  </div>
   
  <div
    class="satellite__speed"
  >
    <h3>
      Требуемая скорость спутника:
    </h3>
     
    <div>
      
            1990 м/c
        
    </div>
     
    <img
      src="https://mediasat.info/wp-content/uploads/2015/06/sat-orbit.jpg"
    />
  </div>
</div>
`;

exports[`c.9.1 Satellite c.9.1.5 with radius 7400k 1`] = `
<div
  class="satellite"
>
  <div
    class="satellite__radius"
  >
    <span>
      Радиус орбиты спутника:
    </span>
     
    <input
      class="form-control"
      type="text"
    />
     
    <span>
      км
    </span>
  </div>
   
  <div
    class="satellite__speed"
  >
    <h3>
      Требуемая скорость спутника:
    </h3>
     
    <div>
      
            7354 м/c
        
    </div>
     
    <img
      src="https://mediasat.info/wp-content/uploads/2015/06/sat-orbit.jpg"
    />
  </div>
</div>
`;
